# adapta-cli

./: .gitignore  AGENTS.md  Makefile  README.md  agent.txt  chat.txt  context.txt  data  debate.json  ideias.md  prompt.txt  pyproject.toml  session.json  skills-lock.json  todo.md
.codex/: hooks.json
.specify/: feature.json  init-options.json  integration.json
debate/: 2026-04-14-manual-roadmap.md  _2026-04-14-manual-roadmap.md  cli-roadmap-prompt.txt  debate-cli-roadmap.json
debate-kits/: README.md  analise-problema-negocio.json  clevel.json  comite-decisao.json  marketing-headlines.json  negociacao-contrato.json  oficina-criativa.json  painel-clientes.json  proposta-executiva.json  revisao-critica-proposta.json  shark-tank.json  traducao-tecnico-negocio.json
docs/: arquitetura.md  code-map.md  features.md  guia-uso-documentacao.md  integracoes.md  licoes-aprendidas.md  modelo-dados.md  procedimento-openclaw.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_files.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
persona/: cfo-rigoroso.md  cliente-cetico.md  cliente-economico.json  cliente-economico.md  cliente-premium.json  cliente-premium.md  comprador-agressivo.json  comprador-agressivo.md  copywriter-competitivo.json  copywriter-competitivo.md  critico-construtivo.json  critico-construtivo.md  editor-critico-de-copy.md  especialista-llm.json  (+9 more)
persona-seeds/: cfo-rigoroso.json  cliente-cetico.json  editor-critico-de-copy.json  juridico-preventivo.json  tradutor-tecnico-negocios.json
(+136 files in other folders)
